<resources>
    <string name="app_name">MyProfile</string>
    <string name="settings">Settings</string>
    <string name="diamond_sword">Diamond Sword</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="by_clicking_register_you_agree_to_our_terms_nand_conditions">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="linkedin_icon">linkedin_icon</string>
    <string name="instagram_icon">instagram_icon</string>
</resources>